--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -28,6 +28,7 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     env:
       MDBOOK_VERSION: 0.4.37
     steps:
@@ -51,6 +52,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     needs: build
     steps:
       - name: Deploy to GitHub Pages
