--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -60,7 +60,12 @@ jobs:
         uses: actions/deploy-pages@v4
       - name: Purge Cloudflare Cache
         id: cf-purge
-        uses: jakejarvis/cloudflare-purge-action@v0.3.0
         env:
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+        run:
+          curl -s -o /dev/null \
+          -H "Content-Type: application/json" \
+          -H "Authorization: Bearer ${CLOUDFLARE_TOKEN}" \
+          --data '{"purge_everything":true}' \
+          "https://api.cloudflare.com/client/v4/zones/${CLOUDFLARE_ZONE}/purge_cache"
