--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -63,9 +63,9 @@ jobs:
         env:
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-        run:
-          curl -s -o /dev/null \
-          -H "Content-Type: application/json" \
+        run: |
+          curl -s -o '/dev/null' \
+          -H 'Content-Type: application/json' \
           -H "Authorization: Bearer ${CLOUDFLARE_TOKEN}" \
           --data '{"purge_everything":true}' \
           "https://api.cloudflare.com/client/v4/zones/${CLOUDFLARE_ZONE}/purge_cache"
