Update GitHub actions versions

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -24,6 +24,13 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+# GitHub actions
+#
+# checkout: https://github.com/actions/checkout
+# configure-pages: https://github.com/actions/configure-pages
+# upload-pages-artifact: https://github.com/actions/upload-pages-artifact
+# deploy-pages: https://github.com/actions/deploy-pages
+
 jobs:
   # Build job
   build:
@@ -32,17 +39,17 @@ jobs:
     env:
       MDBOOK_VERSION: 0.5.1
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Install mdBook
         run: |
           curl -sSL https://github.com/rust-lang/mdBook/releases/download/v${MDBOOK_VERSION}/mdbook-v${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz | sudo tar -C /usr/bin -xz
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v5
       - name: Build with mdBook
         run: mdbook build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./book
 
